--- a/index.html
+++ b/index.html
@@ -3,155 +3,158 @@
 <html lang="it">
 
 <head>
-    <title>VIAN Sentiment Analysis</title>
-    <base target="_top">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
+  <title>VIAN Sentiment Analysis</title>
+  <base target="_top">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
 
-        .progress-container {
-            width: 80%;
-            max-width: 600px;
-            margin: 20px 0;
-        }
+    .progress-container {
+      width: 80%;
+      max-width: 600px;
+      margin: 20px 0;
+    }
 
-        .progress-bar {
-            width: 100%;
-            height: 30px;
-            background-color: #f0f0f0;
-            border-radius: 15px;
-            overflow: hidden;
-        }
+    .progress-bar {
+      width: 100%;
+      height: 30px;
+      background-color: #f0f0f0;
+      border-radius: 15px;
+      overflow: hidden;
+    }
 
-        .progress-fill {
-            height: 100%;
-            background-color: #4CAF50;
-            transition: width 0.5s ease-in-out;
-        }
+    .progress-fill {
+      height: 100%;
+      background-color: #4CAF50;
+      transition: width 0.5s ease-in-out;
+    }
 
-        .progress-text {
-            text-align: center;
-            margin-top: 10px;
-            font-size: 18px;
-        }
+    .progress-text {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 18px;
+    }
 
-        .refresh-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #2196F3;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+    .refresh-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #2196F3;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-        .refresh-button:hover {
-            background-color: #1976D2;
-        }
+    .refresh-button:hover {
+      background-color: #1976D2;
+    }
 
-        .survey-section {
-            width: 80%;
-            max-width: 800px;
-            margin: 40px 0;
-            text-align: center;
-        }
+    .survey-section {
+      width: 80%;
+      max-width: 800px;
+      margin: 40px 0;
+      text-align: center;
+    }
 
-        .button-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
+    .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
 
-        .survey-button {
-            display: flex;
-            flex-direction: column;
-            width: 280px;
-            padding: 20px;
-            border-radius: 10px;
-            text-decoration: none;
-            color: white;
-            transition: transform 0.2s;
-        }
+    .survey-button {
+      display: flex;
+      flex-direction: column;
+      width: 280px;
+      padding: 20px;
+      border-radius: 10px;
+      text-decoration: none;
+      color: white;
+      transition: transform 0.2s;
+    }
 
-        .survey-button:hover {
-            transform: translateY(-5px);
-        }
+    .survey-button:hover {
+      transform: translateY(-5px);
+    }
 
-        .quick {
-            background-color: #FF9800;
-        }
+    .quick {
+      background-color: #FF9800;
+    }
 
-        .complete {
-            background-color: #4CAF50;
-        }
+    .complete {
+      background-color: #4CAF50;
+    }
 
-        .button-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
+    .button-title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
 
-        .button-description {
-            font-size: 14px;
-            opacity: 0.9;
-        }
-    </style>
+    .button-description {
+      font-size: 14px;
+      opacity: 0.9;
+    }
+  </style>
 </head>
 
 <body>
-    <header>
-        <div style="display: flex; align-items: center;">
-            <img src="logo.webp" alt="Logo della scuola" style="height: 100px; margin-right: 20px;">
-            <h1>Liceo VIAN Bracciano</h1>
-        </div>
-    </header>
-    <h2>Stato Sondaggio</h2>
-    <div class="progress-container">
-        <div class="progress-bar">
-            <div id="progressFill" class="progress-fill"></div>
-        </div>
-        <div id="progressText" class="progress-text"></div>
+  <header>
+    <div style="display: flex; align-items: center;">
+      <img src="https://raw.githubusercontent.com/wbigger/2025-vian-sentiment-analysis/refs/heads/main/logo.webp" alt="Logo della scuola" style="height: 100px; margin-right: 20px;">
+      <h1>Liceo VIAN Bracciano</h1>
     </div>
-    <button class="refresh-button" onclick="updateProgress()">Aggiorna</button>
+  </header>
+  <h2>Stato Sondaggio</h2>
+  <div class="progress-container">
+    <div class="progress-bar">
+      <div id="progressFill" class="progress-fill"></div>
+    </div>
+    <div id="progressText" class="progress-text"></div>
+  </div>
+  <button class="refresh-button" onclick="updateProgress()">Aggiorna</button>
 
-    <!-- Sezione Studenti -->
-    <div class="survey-section">
-        <h2>Solo studenti</h2>
-        <p>Scegli il tipo di sondaggio che preferisci completare:</p>
-        <div class="button-container">
-            <a href="redirectToRandomSurveyQuickStudent(event)" class="survey-button quick">
-                <span class="button-title">Sondaggio Veloce</span>
-                <span class="button-description">1-2 minuti • Per un aiuto veloce</span>
-            </a>
-            <a href="LINK_SONDAGGIO_COMPLETO" class="survey-button complete">
-                <span class="button-title">Sondaggio Completo</span>
-                <span class="button-description">3-5 minuti • Per un maggiore contributo</span>
-            </a>
-        </div>
-    </div>
-    <h2>Per tutti</h2>
+  <!-- Sezione Studenti -->
+  <div class="survey-section">
+    <h2>Solo studenti</h2>
     <p>Scegli il tipo di sondaggio che preferisci completare:</p>
     <div class="button-container">
-        <a href="LINK_SONDAGGIO_VELOCE" class="survey-button quick">
-            <span class="button-title">Sondaggio Veloce</span>
-            <span class="button-description">1-2 minuti • Per un aiuto veloce</span>
-        </a>
-        <a href="LINK_SONDAGGIO_COMPLETO" class="survey-button complete">
-            <span class="button-title">Sondaggio Completo</span>
-            <span class="button-description">3-5 minuti • Per un maggiore contributo</span>
-        </a>
+      <a href="#" onclick="redirectToRandomSurveyQuickStudent(event)" target="_blank" class="survey-button quick">
+        <span class="button-title">Sondaggio Veloce</span>
+        <span class="button-description">1-2 minuti • Per un aiuto veloce</span>
+      </a>
+      <a href="#" onclick="redirectToRandomSurveyFullStudent(event)" target="_blank"
+      class="survey-button complete">
+        <span class="button-title">Sondaggio Completo</span>
+        <span class="button-description">3-5 minuti • Per un maggiore contributo</span>
+      </a>
     </div>
+  </div>
+  <h2>Per tutti</h2>
+  <p>Scegli il tipo di sondaggio che preferisci completare:</p>
+  <div class="button-container">
+    <a href="#" onclick="redirectToRandomSurveyQuickOther(event)" target="_blank"
+    class="survey-button quick">
+      <span class="button-title">Sondaggio Veloce</span>
+      <span class="button-description">1-2 minuti • Per un aiuto veloce</span>
+    </a>
+    <a href="#" onclick="redirectToRandomSurveyFullOther(event)" target="_blank"
+    class="survey-button complete">
+      <span class="button-title">Sondaggio Completo</span>
+      <span class="button-description">3-5 minuti • Per un maggiore contributo</span>
+    </a>
+  </div>
 
 
-    <script>
-        function updateProgress() {
+  <script>
+    function updateProgress() {
             console.log(`updateProgress()`);
             try {
                 google.script.run
@@ -173,19 +176,54 @@
             document.getElementById('progressText').innerHTML =
                 `${responses} risposte su ${target} (${percentage.toFixed(1)}%)`;
         }
+        
         // Aggiorna al caricamento della pagina
         function redirectToRandomSurveyQuickStudent(event) {
-            consol.log("Redirecting to survey...");
+            console.log("Redirecting to survey...");
             event.preventDefault();
             google.script.run
                 .withSuccessHandler(function (url) {
-                    window.location.href = url;
+                    window.open(url, '_blank');
                 })
                 .getRandomStudentQuickSurvey();
+            return false;
+        }
+
+        function redirectToRandomSurveyFullStudent(event) {
+            console.log("Redirecting to survey...");
+            event.preventDefault();
+            google.script.run
+                .withSuccessHandler(function (url) {
+                    window.open(url, '_blank');
+                })
+                .getRandomStudentFullSurvey();
+            return false;
+        }
+
+        function redirectToRandomSurveyQuickOther(event) {
+            console.log("Redirecting to survey...");
+            event.preventDefault();
+            google.script.run
+                .withSuccessHandler(function (url) {
+                    window.open(url, '_blank');
+                })
+                .getRandomOtherQuickSurvey();
+            return false;
+        }
+
+        function redirectToRandomSurveyFullOther(event) {
+            console.log("Redirecting to survey...");
+            event.preventDefault();
+            google.script.run
+                .withSuccessHandler(function (url) {
+                    window.open(url, '_blank');
+                })
+                .getRandomOtherFullSurvey();
+            return false;
         }
         // Aggiorna al caricamento della pagina
         window.onload = updateProgress;
-    </script>
+  </script>
 </body>
 
 </html>
